# forcedTranscribe

./: .gitignore  README.md  pyproject.toml
lib/: __init__.py  process_mfa.py  textgrid_handler.py  to_textgrid.py  utilities.py  whisper_transcribers.py
