[project]
name = "forcedtranscribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-whisper>=20240930",
    "praat-parselmouth>=0.4.5",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "ipython>=9.1.0",
]
